# kairos

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Kairos-installer.msi  Kairos-installer.wixpdb  LICENSE-APACHE  Makefile  README.md
.builds/: freebsd.yml  linux.yml
.github/workflows/: ci.yml  release.yml  upload_asset.sh
docs/: features.md
extra/: kairos.info
extra/completions/: _kairos  kairos.bash  kairos.fish
extra/linux/: Kairos.desktop  org.kairos.Kairos.appdata.xml
extra/man/: kairos-bindings.5.scd  kairos-escapes.7.scd  kairos-msg.1.scd  kairos.1.scd  kairos.5.scd
extra/osx/Kairos.app/Contents/: Info.plist
extra/osx/Kairos.app/Contents/Resources/: kairos.icns
kairos/: Cargo.toml  build.rs
kairos/src/: claude_sessions.rs  cli.rs  clipboard.rs  event.rs  git_worker.rs  highlight.rs  logging.rs  main.rs  markdown.rs  message_bar.rs  panic.rs  scheduler.rs  session.rs  window_context.rs
kairos/src/config/: bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  font.rs  general.rs  mod.rs  monitor.rs  mouse.rs  persist.rs  scrolling.rs  selection.rs  terminal.rs  ui_config.rs  window.rs
kairos/src/display/: chrome.rs  color.rs  content.rs  cursor.rs  damage.rs  hint.rs  meter.rs  mod.rs  project_pane.rs  window.rs
kairos/src/input/: keyboard.rs  mod.rs
kairos/src/polling/: ipc.rs  mod.rs
kairos/src/renderer/: mod.rs  rects.rs
kairos/src/renderer/text/: gles2.rs  glsl3.rs  mod.rs
kairos/windows/: kairos.rc
kairos/windows/wix/: kairos.wxs  license.rtf
kairos_config/: Cargo.toml
kairos_config/src/: lib.rs
kairos_config_derive/: Cargo.toml
kairos_config_derive/src/: lib.rs  serde_replace.rs
kairos_config_derive/src/config_deserialize/: de_enum.rs  de_struct.rs
kairos_config_derive/tests/: config.rs
kairos_terminal/: CHANGELOG.md  Cargo.toml
kairos_terminal/src/: event_loop.rs  lib.rs
kairos_terminal/src/grid/: resize.rs
kairos_terminal/src/term/: cell.rs  mod.rs  search.rs
kairos_terminal/src/tty/: mod.rs  unix.rs
kairos_terminal/src/tty/windows/: blocking.rs  conpty.rs
kairos_terminal/tests/: ref.rs
kairos_terminal/tests/ref/hyperlinks/: grid.json
scripts/: README.md  create-flamegraph.sh
