[package]
name = "kairos"
version = "0.0.3"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "A fast, cross-platform, OpenGL terminal emulator"
readme = "README.md"
homepage = "https://kairos.org"
repository = "https://github.com/kairos/kairos"
edition.workspace = true
rust-version.workspace = true

[dependencies.kairos_terminal]
path = "../kairos_terminal"
version = "0.26.1-dev"

[dependencies.kairos_config_derive]
path = "../kairos_config_derive"
version = "0.2.6-dev"

[dependencies.kairos_config]
path = "../kairos_config"
version = "0.2.4-dev"

[dependencies]
ahash = { version = "0.8.6", features = ["no-rng"] }
bitflags = "2.2.1"
clap = { version = "4.2.7", features = ["derive", "env"] }
copypasta = { version = "0.10.1", default-features = false }
crossfont = "0.8.1"
glutin = { version = "0.32.2", default-features = false, features = ["egl", "wgl"] }
home = "0.5.5"
libc = "0.2"
log = { version = "0.4", features = ["std", "serde"] }
notify = "8.0.0"
parking_lot = "0.12.0"
polling = "3.11.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
signal-hook = { version = "0.4.3", default-features = false }
tempfile = "3.12.0"
toml.workspace = true
toml_edit.workspace = true
unicode-width = "0.2.0"
winit = { version = "0.30.9", default-features = false, features = ["rwh_06", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.15"
tree-sitter = "0.26.9"
tree-sitter-highlight = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-md = "0.5.3"
# Markdown parsing for the rendered file preview; only the parser is needed.
pulldown-cmark = { version = "0.13", default-features = false }

[build-dependencies]
gl_generator = "0.14.0"

[dev-dependencies]
clap_complete = "4.2.3"

[target.'cfg(not(windows))'.dependencies]
xdg = "3.0.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
png = { version = "0.17.5", default-features = false, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSString",
    "NSLocale",
    "NSUserDefaults",
] }
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSColorSpace",
    "NSResponder",
    "NSView",
    "NSWindow",
] }

[target.'cfg(windows)'.dependencies]
dirs = "6.0.0"
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"

[features]
default = ["wayland", "x11"]
x11 = [
    "copypasta/x11",
    "winit/x11",
    "glutin/x11",
    "glutin/glx",
    "png",
]
wayland = [
    "copypasta/wayland",
    "glutin/wayland",
    "winit/wayland",
    "winit/wayland-dlopen",
    "winit/wayland-csd-adwaita-crossfont",
]
nightly = []
