[package]
name = "kairos_config"
version = "0.2.4-dev"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "MIT OR Apache-2.0"
description = "Kairos configuration abstractions"
homepage = "https://kairos.org"
repository = "https://github.com/kairos/kairos"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = { version = "0.4.17", features = ["serde"] }
serde = "1.0.163"
toml.workspace = true

[dev-dependencies]
kairos_config_derive = { version = "0.2.6-dev", path = "../kairos_config_derive" }
serde = { version = "1.0.163", features = ["derive"] }
